Fixed css classes overlapping. Element settings can now be closed again

--- a/src/app/components/element-setting/element-setting.component.css
+++ b/src/app/components/element-setting/element-setting.component.css
@@ -2,7 +2,7 @@
   font-size: 1rem;
 }
 
-.color-picker input {
+.ngx-color-picker input {
   height: 1.5rem;
   border-bottom: none;
 }
